[gd_scene load_steps=8 format=3 uid="uid://r1pjibjeu3rv"]

[ext_resource type="Texture2D" uid="uid://x8w2uhbxlgpd" path="res://my-wordle-bg.png" id="1_i2c8p"]
[ext_resource type="Theme" uid="uid://dt7q57jxovxw2" path="res://my-theme.tres" id="2_c83no"]
[ext_resource type="Script" uid="uid://q5x7pcj1nlvt" path="res://create_template_menu.gd" id="2_lstki"]
[ext_resource type="Script" uid="uid://l2wd0dgvhbbt" path="res://le_name.gd" id="4_lstki"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c83no"]
texture = ExtResource("1_i2c8p")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.497474, 0.497474, 0.497474, 0.960784)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyca0"]
bg_color = Color(0.319258, 0.2588, 0.186337, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.299865, 0.241603, 0.0758096, 1)
border_blend = true
expand_margin_left = 12.0
expand_margin_top = 12.0
expand_margin_right = 12.0
expand_margin_bottom = 12.0

[sub_resource type="Theme" id="Theme_c83no"]

[node name="CreateTemplateMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c83no")
script = ExtResource("2_lstki")

[node name="panel_bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_c83no")

[node name="file_dialog" type="FileDialog" parent="."]
title = "Open a File or Directory"
initial_position = 2
ok_button_text = "Open"
file_mode = 3
access = 2

[node name="panel_form" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.293
anchor_right = 0.71
anchor_bottom = 1.0
offset_left = -0.536011
offset_top = 31.0
offset_right = 0.0799561
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xyca0")

[node name="label_header" type="Label" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.036
anchor_right = 0.5
anchor_bottom = 0.036
offset_left = -86.0
offset_top = 10.752
offset_right = 86.0
offset_bottom = 33.752
grow_horizontal = 2
theme = SubResource("Theme_c83no")
text = "New Wordle Template"

[node name="label_name" type="Label" parent="panel_form"]
layout_mode = 2
anchor_left = 0.021
anchor_top = 0.177
anchor_right = 0.11
anchor_bottom = 0.209
offset_left = -0.101001
offset_top = -0.233002
offset_right = 0.0899925
offset_bottom = 0.118996
text = "Name:"

[node name="le_name" type="LineEdit" parent="panel_form"]
layout_mode = 2
anchor_left = 0.123
anchor_top = 0.191
anchor_right = 0.969
anchor_bottom = 0.191
offset_left = -0.163002
offset_top = -15.399
offset_right = -0.0889587
offset_bottom = 15.601
script = ExtResource("4_lstki")

[node name="le_bgpath" type="LineEdit" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295
anchor_top = 0.273
anchor_right = 0.817
anchor_bottom = 0.273
offset_left = 0.104996
offset_top = -15.497
offset_right = 0.0230103
offset_bottom = 15.503

[node name="btn_bg" type="Button" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.898
anchor_top = 0.275
anchor_right = 0.898
anchor_bottom = 0.275
offset_left = -32.938
offset_top = -14.4751
offset_right = 33.062
offset_bottom = 14.5249
theme_override_font_sizes/font_size = 16
text = "Open"

[node name="le_logopath" type="LineEdit" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.198
anchor_top = 0.355
anchor_right = 0.819
anchor_bottom = 0.355
offset_left = -0.238007
offset_top = -15.595
offset_right = 0.0609741
offset_bottom = 15.405

[node name="btn_logo" type="Button" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.898
anchor_top = 0.355
anchor_right = 0.898
anchor_bottom = 0.355
offset_left = -32.938
offset_top = -14.595
offset_right = 33.062
offset_bottom = 14.405
theme_override_font_sizes/font_size = 16
text = "Open"

[node name="le_musicpath" type="LineEdit" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21
anchor_top = 0.433
anchor_right = 0.819
anchor_bottom = 0.433
offset_left = -0.0100021
offset_top = -15.737
offset_right = 0.0610046
offset_bottom = 15.263

[node name="btn_music" type="Button" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.898
anchor_top = 0.435
anchor_right = 0.898
anchor_bottom = 0.435
offset_left = -32.938
offset_top = -14.715
offset_right = 33.062
offset_bottom = 14.285
theme_override_font_sizes/font_size = 16
text = "Open"

[node name="le_datapath" type="LineEdit" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.183
anchor_top = 0.512
anchor_right = 0.817
anchor_bottom = 0.512
offset_left = -0.0230026
offset_top = -15.368
offset_right = 0.0230408
offset_bottom = 15.632

[node name="btn_data" type="Button" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.898
anchor_top = 0.514
anchor_right = 0.898
anchor_bottom = 0.514
offset_left = -32.938
offset_top = -14.346
offset_right = 33.062
offset_bottom = 14.654
theme_override_font_sizes/font_size = 16
text = "Open"

[node name="label_bgpath" type="Label" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.258
anchor_right = 0.279
anchor_bottom = 0.29
offset_left = -0.101001
offset_top = -0.162025
offset_right = -0.199005
offset_bottom = 0.189972
text = "Background Path:"

[node name="label_logopath" type="Label" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.339
anchor_right = 0.183
anchor_bottom = 0.372
offset_left = -0.101001
offset_top = 0.228989
offset_right = -0.0230103
offset_bottom = 0.0919952
text = "Logo Path:"

[node name="label_musicpath" type="Label" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.415
anchor_right = 0.198
anchor_bottom = 0.448
offset_left = -0.101001
offset_top = 0.0649719
offset_right = -0.238014
offset_bottom = -0.0720215
text = "Music Path:"

[node name="label_datapath" type="Label" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.497
anchor_right = 0.175
anchor_bottom = 0.53
offset_left = -0.101001
offset_top = -0.0330048
offset_right = -0.175011
offset_bottom = -0.170013
text = "Data Path:"

[node name="label_warning" type="Label" parent="panel_form"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.763
anchor_right = 0.491
anchor_bottom = 0.763
offset_left = -218.171
offset_top = -34.107
offset_right = 217.829
offset_bottom = 33.893
theme_override_font_sizes/font_size = 20

[node name="vcontainer_btn_back" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.398
anchor_top = 0.526
anchor_right = 0.398
anchor_bottom = 0.526
offset_left = -104.496
offset_top = -16.848
offset_right = 105.504
offset_bottom = 17.152
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="btn_back" type="Button" parent="vcontainer_btn_back"]
layout_mode = 2
size_flags_vertical = 7
theme = ExtResource("2_c83no")
text = "Back"

[node name="vcontainer_btn_save" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.595
anchor_top = 0.526
anchor_right = 0.595
anchor_bottom = 0.526
offset_left = -104.44
offset_top = -16.848
offset_right = 105.56
offset_bottom = 17.152
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="btn_save" type="Button" parent="vcontainer_btn_save"]
layout_mode = 2
size_flags_vertical = 7
theme = ExtResource("2_c83no")
text = "Save"

[connection signal="dir_selected" from="file_dialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="file_dialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="file_dialog" to="." method="_on_file_dialog_files_selected"]
[connection signal="pressed" from="panel_form/btn_bg" to="." method="_on_btn_bg_pressed"]
[connection signal="pressed" from="panel_form/btn_logo" to="." method="_on_btn_logo_pressed"]
[connection signal="pressed" from="panel_form/btn_music" to="." method="_on_btn_music_pressed"]
[connection signal="pressed" from="panel_form/btn_data" to="." method="_on_btn_data_pressed"]
[connection signal="pressed" from="vcontainer_btn_back/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="vcontainer_btn_save/btn_save" to="." method="_on_btn_save_pressed"]
